--- a/locales/it.json
+++ b/locales/it.json
@@ -35,10 +35,7 @@
       "next": "Pagina successiva",
       "previous": "Pagina precedente"
     },
-    "search": {
-      "search": "Cerca",
-      "reset": "Cancella termine ricerca"
-    },
+    "search": { "search": "Cerca", "reset": "Cancella termine ricerca" },
     "cart": {
       "view": "Visualizza carrello ({{ count }})",
       "item_added": "Articolo aggiunto al carrello",
@@ -57,11 +54,7 @@
       "name": "Cursore"
     }
   },
-  "newsletter": {
-    "label": "Indirizzo email",
-    "success": "Grazie per l'iscrizione",
-    "button_label": "Iscriviti"
-  },
+  "newsletter": { "label": "Indirizzo email", "success": "Grazie per l'iscrizione", "button_label": "Iscriviti" },
   "accessibility": {
     "skip_to_text": "Vai direttamente ai contenuti",
     "close": "Chiudi",
@@ -69,10 +62,7 @@
     "vendor": "Produttore:",
     "error": "Errore",
     "refresh_page": "Scegliendo una selezione si ottiene un aggiornamento completo della pagina.",
-    "link_messages": {
-      "new_window": "Si apre in una nuova finestra.",
-      "external": "Apre un sito web esterno."
-    },
+    "link_messages": { "new_window": "Si apre in una nuova finestra.", "external": "Apre un sito web esterno." },
     "loading": "Caricamento in corso...",
     "skip_to_product_info": "Passa alle informazioni sul prodotto",
     "total_reviews": "recensioni totali",
@@ -84,11 +74,7 @@
     "article": {
       "blog": "Blog",
       "read_more_title": "Leggi di più: {{ title }}",
-      "comments": {
-        "one": "{{ count }} commento",
-        "other": "{{ count }} commenti",
-        "many": "{{ count }} commenti"
-      },
+      "comments": { "one": "{{ count }} commento", "other": "{{ count }} commenti", "many": "{{ count }} commenti" },
       "moderated": "Si prega di notare che, prima di essere pubblicati, i commenti devono essere approvati.",
       "comment_form_title": "Lascia un commento",
       "name": "Nome",
@@ -101,10 +87,7 @@
       "success_moderated": "Il tuo commento è stato pubblicato. Lo pubblicheremo fra poco, il nostro blog è soggetto a moderazione."
     }
   },
-  "onboarding": {
-    "product_title": "Esempio di titolo del prodotto",
-    "collection_title": "Nome della collezione"
-  },
+  "onboarding": { "product_title": "Esempio di titolo del prodotto", "collection_title": "Nome della collezione" },
   "products": {
     "product": {
       "add_to_cart": "Aggiungi al carrello",
@@ -180,9 +163,7 @@
       "duties_included": "Dazi inclusi.",
       "duties_and_taxes_included": "Dazi e imposte inclusi."
     },
-    "modal": {
-      "label": "Galleria contenuti multimediali"
-    },
+    "modal": { "label": "Galleria contenuti multimediali" },
     "facets": {
       "apply": "Applica",
       "clear": "Cancella",
@@ -253,9 +234,7 @@
         "many": "{{ count }} suggerimenti"
       }
     },
-    "cart": {
-      "cart": "Carrello"
-    },
+    "cart": { "cart": "Carrello" },
     "contact": {
       "form": {
         "name": "Nome",
@@ -268,20 +247,13 @@
         "title": "Modulo di contatto"
       }
     },
-    "404": {
-      "title": "Pagina non trovata",
-      "subtext": "404"
-    }
+    "404": { "title": "Pagina non trovata", "subtext": "404" }
   },
   "sections": {
     "header": {
       "announcement": "Annuncio",
       "menu": "Menu",
-      "cart_count": {
-        "one": "{{ count }} articolo",
-        "other": "{{ count }} articoli",
-        "many": "{{ count }} articoli"
-      }
+      "cart_count": { "one": "{{ count }} articolo", "other": "{{ count }} articoli", "many": "{{ count }} articoli" }
     },
     "cart": {
       "title": "Il tuo carrello",
@@ -315,9 +287,7 @@
       "taxes_at_checkout_shipping_at_checkout_with_policy_html": "Imposte, sconti e <a href=\"{{ link }}\">spedizione</a> calcolati al check-out.",
       "taxes_at_checkout_shipping_at_checkout_without_policy": "Imposte, sconti e spedizione calcolati al check-out."
     },
-    "footer": {
-      "payment": "Metodi di pagamento"
-    },
+    "footer": { "payment": "Metodi di pagamento" },
     "featured_blog": {
       "view_all": "Visualizza tutto",
       "onboarding_title": "Articolo del blog",
@@ -327,17 +297,13 @@
       "view_all": "Visualizza tutto",
       "view_all_label": "Visualizza tutti i prodotti della collezione {{ collection_name }}"
     },
-    "collection_list": {
-      "view_all": "Visualizza tutto"
-    },
+    "collection_list": { "view_all": "Visualizza tutto" },
     "collection_template": {
       "title": "Collezione",
       "empty": "Nessun prodotto trovato",
       "use_fewer_filters_html": "Utilizza meno filtri o <a class=\"{{ class }}\" href=\"{{ link }}\">rimuovi tutto</a>"
     },
-    "video": {
-      "load_video": "Carica il video: {{ description }}"
-    },
+    "video": { "load_video": "Carica il video: {{ description }}" },
     "slideshow": {
       "load_slide": "Carica slide",
       "previous_slideshow": "Slide precedente",
@@ -347,9 +313,7 @@
       "carousel": "Carousel",
       "slide": "Scorrimento"
     },
-    "page": {
-      "title": "Titolo pagina"
-    },
+    "page": { "title": "Titolo pagina" },
     "announcements": {
       "previous_announcement": "Annuncio precedente",
       "next_announcement": "Annuncio successivo",
@@ -536,5 +500,6 @@
       "expanded": "Modulo destinatario del buono regalo espanso",
       "collapsed": "Modulo destinatario del buono regalo compresso"
     }
-  }
+  },
+  "shopify": { "links": { "powered_by_shopify": " " } }
 }
